--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "next": "^8.0.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.5",
     "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "NODE_ENV=test jest --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -23,5 +23,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "jest": "23.6.0"
+  }
 }
